New project completed

--- a/FrameWork/test-output/old/Default suite/methods-alphabetical.html
+++ b/FrameWork/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaa7c7">  <td>22/11/16 09:23:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Selecting.Tony()[pri:0, instance:HomeModules.Selecting@47faa49c]">Tony</td> 
-  <td>main@1498438472</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/11/16 09:23:38</td>   <td>59</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.checkingFailure(org.testng.ITestResult)[pri:0, instance:HomeModules.Selecting@47faa49c]">&lt;&lt;checkingFailure</td> 
+<tr bgcolor="8764ef">  <td>22/11/18 18:53:31</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforetest()[pri:0, instance:HomeModules.TestCase@47faa49c]">&gt;&gt;beforetest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1498438472</td>   <td></td> </tr>
+<tr bgcolor="8764ef">  <td>22/11/18 18:53:34</td>   <td>3465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.checkingFailure(org.testng.ITestResult)[pri:0, instance:HomeModules.TestCase@47faa49c]">&lt;&lt;checkingFailure</td> 
 <td>&nbsp;</td>  <td>main@1498438472</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/11/16 09:23:38</td>   <td>439</td> <td title="&lt;&lt;BaseClass.colsethebrowser()[pri:0, instance:HomeModules.Selecting@47faa49c]">&lt;&lt;colsethebrowser</td> 
+<tr bgcolor="8764ef">  <td>22/11/18 18:53:34</td>   <td>3630</td> <td title="&lt;&lt;BaseClass.colsethebrowser()[pri:0, instance:HomeModules.TestCase@47faa49c]">&lt;&lt;colsethebrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1498438472</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/11/16 09:23:38</td>   <td>330</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logginout()[pri:0, instance:HomeModules.Selecting@47faa49c]">&lt;&lt;logginout</td> 
+<tr bgcolor="8764ef">  <td>22/11/18 18:53:34</td>   <td>3472</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logginout()[pri:0, instance:HomeModules.TestCase@47faa49c]">&lt;&lt;logginout</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1498438472</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/11/16 09:23:27</td>   <td>-10309</td> <td title="&gt;&gt;BaseClass.lunchingBrowser()[pri:0, instance:HomeModules.Selecting@47faa49c]">&gt;&gt;lunchingBrowser</td> 
+<tr bgcolor="8764ef">  <td>22/11/18 18:53:20</td>   <td>-10517</td> <td title="&gt;&gt;BaseClass.lunchingBrowser()[pri:0, instance:HomeModules.TestCase@47faa49c]">&gt;&gt;lunchingBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1498438472</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/11/16 09:23:34</td>   <td>-3795</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.navigatingtoapp()[pri:0, instance:HomeModules.Selecting@47faa49c]">&gt;&gt;navigatingtoapp</td> 
+<tr bgcolor="8764ef">  <td>22/11/18 18:53:31</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.navigatingtoapp()[pri:0, instance:HomeModules.TestCase@47faa49c]">&gt;&gt;navigatingtoapp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1498438472</td>   <td></td> </tr>
+<tr bgcolor="62fc7d">  <td>22/11/18 18:53:34</td>   <td>3090</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase.testcaseDescription()[pri:0, instance:HomeModules.TestCase@47faa49c]">testcaseDescription</td> 
+  <td>main@1498438472</td>   <td></td> </tr>
 </table>
